--- a/public/index.html
+++ b/public/index.html
@@ -1,210 +1,56 @@
 <!DOCTYPE html>
-<html lang="en" n>
+<html lang="en" ng-App="zeroWasteApp">
 
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <title>zero waste</title>
-    <!-- Bootstrap Core CSS -->
-    <link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Custom Fonts -->
-    <link href="bower_components/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
-    <link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
-    <!-- Theme CSS -->
-    <link href="css/main.css" rel="stylesheet" type="text/css">
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="">
+  <meta name="author" content="">
+  <title>zero waste</title>
+
+  <!-- Bootstrap Core CSS -->
+  <link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+
+  <!-- Custom Fonts -->
+  <link href="bower_components/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
+  <link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
+
+  <!-- Theme CSS -->
+  <link href="css/main.css" rel="stylesheet" type="text/css">
 </head>
 
 <body id="page-top" class="index">
-  <div class="wall">
-    </div>
-    <!-- Navigation -->
-    <nav id="mainNav" class="navbar navbar-default navbar-custom navbar-fixed-top">
-        <div class="container">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header page-scroll">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
-                </button>
-                <a id="main-title" class="navbar-brand page-scroll" href="#page-top">Zero waste</a>
-            </div>
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav navbar-right nav-btns">
-                    <li>
-                        <a class="page-scroll" href="#main-discription">Why Save food</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#services">Shops</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#portfolio">Last Products </a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="login.html">Log In</a>
-                    </li>
-                </ul>
-            </div>
-            <!-- /.navbar-collapse -->
-        </div>
-    </nav>
-    <!-- Header -->
-    <header>
-    <div class="wall"></div>
-        <div class="container">
-            <div class="intro-text">
-                <div class="intro-lead-in">Let's save money...</div>
-                <div class="intro-heading">and help the enviroment</div>
-                <div class="intro-description">Check for products in your area, and save money getting products that would otherwise be wasted.</div>
-                <a href="products.html" class="page-scroll btn btn-xl">Check products</a>
-            </div>
-        </div>
-    </header>
-    <section id="main-discription" class="bg-light-gray">
-        <div class="container">
-            <div class="row last-added">
-                <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">WHY FIGHT FOOD WASTE</h2>
-                    <h3 class="section-subheading text-muted">Together we can make the difference</h3>
-                    <div class="row discription">
-                    <div class="col-md-6">
-                        <p>Around 88 million tonnes of food are wasted annually in the EU, and over 40% occurs at retail and consuler level. Wasting food depletes the enviroment of limited natural resources and is also a waste of money.It depends of every one of us to do our small part in preventing and reducing food waste.
-                    </div>
-                    <div class="col-md-6">
-                        <p>The misunderstandings of the "best before" and "use by" date labels leading to edible foods being thrown away but a wide range of initiatives to prevent and reduce food waste can be taken. If everyone start at local level to implement some measures, then it will make a big difference to the world. </p>
-                    </div>
-                    </div>
-                </div>
-            </div>
-            
-        </div>
-    </section>
-    <!-- Services Section -->
-    <section id="services">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">SHOPS</h2>
-                    <h3 class="section-subheading text-muted">Shops can get profit selling products that otherwise would give them costs</h3>
-                </div>
-            </div>
-            <div class="row text-center">
-                <div class="col-md-3">
-                    <img src="img/market.jpg" class="fish-shop" alt="Cinque Terre">
-                    <h4 class="service-heading">Supermarket</h4>
-                    <p class="text-muted">Every day supermarkets through away food that could be still consumed. They lose money everyday and the enviroment also lose.</p>
-                </div>
-                <div class="col-md-3">
-                    <img src="img/fish-shop.jpg" class="fish-shop" alt="Cinque Terre">
-                    <h4 class="service-heading">Fish Shops</h4>
-                    <p class="text-muted">With the fish stocks decreasing globally this kind of shops have a important role in the global food save. The impact in all marine life depends on all the small gestures </p>
-                </div>
-                <div class="col-md-3">
-                    <img src="img/bakery.jpg" class="fish-shop" alt="Cinque Terre">
-                    <h4 class="service-heading">Bakery</h4>
-                    <p class="text-muted">Every day bakeries through away lots of bread, buying in this kind shop at the end of the day can be cheaper and better for everyone.</p>
-                </div>
-                <div class="col-md-3">
-                    <img src="img/butchery.jpg" class="fish-shop" alt="Cinque Terre">
-                    <h4 class="service-heading">Butchery</h4>
-                    <p class="text-muted">The impact of the meat production in global enviroment effect is big. Every little saving of meat is one step ahead to help us to keep a better world.</p>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- Portfolio Grid Section -->
-    <section id="portfolio" class="bg-light-gray">
-        <div class="container">
-            <div class="row last-added">
-                <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Last products Added</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-4 col-sm-6 portfolio-item group-products">
-                    <div class="portfolio-caption">
-                        <img id="last-img" src="img/pollo-asado.jpg" class="img-responsive" alt="">
-                        <h4>Roasted Chicken</h4>
-                        <p class="text-muted">Distance: 600m</p>
-                    </div>
-                </div>
-                <div class="col-md-4 col-sm-6 portfolio-item">
-                    <div class="portfolio-caption">
-                        <img id="last-img" src="img/ensalada.jpg" class="img-responsive" alt="">
-                        <h4>Fresh Salad</h4>
-                        <p class="text-muted">Distance: 850m</p>
-                    </div>
-                </div>
-                <div class="col-md-4 col-sm-6 portfolio-item">
-                    <div class="portfolio-caption">
-                        <img id="last-img" src="img/pan-barra.jpg" class="img-responsive" alt="">
-                        <h4>Bread</h4>
-                        <p class="text-muted">Distance: 1200m</p>
-                    </div>
-                </div>
-                <div class="col-md-4 col-sm-6 portfolio-item">
-                    <div class="portfolio-caption">
-                        <h4>Carrots</h4>
-                        <p class="text-muted">Website Design</p>
-                    </div>
-                </div>
-                <div class="col-md-4 col-sm-6 portfolio-item">
-                    <div class="portfolio-caption">
-                        <h4>Croissantes</h4>
-                        <p class="text-muted">Website Design</p>
-                    </div>
-                </div>
-                <div class="col-md-4 col-sm-6 portfolio-item">
-                    <div class="portfolio-caption">
-                        <h4>Fresh Fish</h4>
-                        <p class="text-muted">Website Design</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <footer>
-        <div class="container">
-            <div class="row">
-                <div class="col-md-4">
-                    <span class="copyright">Copyright &copy; Your Website 2016</span>
-                </div>
-                <div class="col-md-4">
-                    <ul class="list-inline social-buttons">
-                        <li><a href="#"><i class="fa fa-twitter"></i></a>
-                        </li>
-                        <li><a href="#"><i class="fa fa-facebook"></i></a>
-                        </li>
-                        <li><a href="#"><i class="fa fa-linkedin"></i></a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="col-md-4">
-                    <ul class="list-inline quicklinks">
-                        <li><a href="#">Privacy Policy</a>
-                        </li>
-                        <li><a href="#">Terms of Use</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </footer>
+
+  <div ng-include src="'templates/includes/header.html'"></div>
+  <ng-view></ng-view>
+  <div ng-include src="'templates/includes/footer.html'"></div>
+
+    <!--  Angular -->
+    <script type="text/javascript" src="bower_components/angular/angular.min.js"></script>
+    <script type="text/javascript" src="bower_components/angular-route/angular-route.min.js"></script>
+
     <!-- jQuery -->
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
+
     <!-- Bootstrap Core JavaScript -->
     <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+
     <!-- Plugin JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js" integrity="sha384-mE6eXfrb8jxl0rzJDBRanYqgBxtJ6Unn4/1F7q4xRRyIw7Vdg9jP4ycT7x1iVsgb" crossorigin="anonymous"></script>
     <!-- Contact Form JavaScript -->
     <!-- Theme JavaScript -->
-    <script src="js/agency.min.js"></script>
+    <!-- <script src="js/agency.min.js"></script> -->
+    <!-- Angular dependencies -->
+    <script type="text/javascript" src="js/app.js"></script>
+    <script type="text/javascript" src="js/config.js"></script>
+    <!-- <script type="text/javascript" src="/js/main.js"></script> -->
+    <!-- <script type="text/javascript" src="js/services/apiService.js"></script> -->
+    <!-- <script type="text/javascript" src="js/controllers/filtersController.js"></script> -->
+    <script type="text/javascript" src="js/controllers/homeController.js"></script>
 </body>
 
 </html>
