--- a/public/index.html
+++ b/public/index.html
@@ -41,16 +41,15 @@
 
     <!-- Plugin JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js" integrity="sha384-mE6eXfrb8jxl0rzJDBRanYqgBxtJ6Unn4/1F7q4xRRyIw7Vdg9jP4ycT7x1iVsgb" crossorigin="anonymous"></script>
-    <!-- Contact Form JavaScript -->
-    <!-- Theme JavaScript -->
-    <!-- <script src="js/agency.min.js"></script> -->
-    <!-- Angular dependencies -->
+    
     <script type="text/javascript" src="js/app.js"></script>
     <script type="text/javascript" src="js/config.js"></script>
-    <!-- <script type="text/javascript" src="/js/main.js"></script> -->
-    <!-- <script type="text/javascript" src="js/services/apiService.js"></script> -->
-    <!-- <script type="text/javascript" src="js/controllers/filtersController.js"></script> -->
+
     <script type="text/javascript" src="js/controllers/homeController.js"></script>
+    <script type="text/javascript" src="js/controllers/productsController.js"></script>
+    <script type="text/javascript" src="js/controllers/headerController.js"></script>
+
+
 </body>
 
 </html>
