--- a/client/index.html
+++ b/client/index.html
@@ -40,6 +40,7 @@
     <script type="text/javascript" src="js/controllers/homeController.js"></script>
     <script type="text/javascript" src="js/controllers/productsController.js"></script>
     <script type="text/javascript" src="js/controllers/headerController.js"></script>
+    <script type="text/javascript" src="js/controllers/uploadController.js"></script>
     <!-- SERVICES/FACTORY -->
     <script type="text/javascript" src="js/services/ApiService.js"></script>
 </body>
