--- a/client/index.html
+++ b/client/index.html
@@ -39,6 +39,7 @@
     <script type="text/javascript" src="js/controllers/homeController.js"></script>
     <script type="text/javascript" src="js/controllers/productsController.js"></script>
     <script type="text/javascript" src="js/controllers/uploadController.js"></script>
+    <script type="text/javascript" src="js/controllers/shopsController.js"></script>
     
 
     <!-- SERVICES/FACTORY -->
