--- a/client/index.html
+++ b/client/index.html
@@ -15,6 +15,7 @@
     <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
     <!-- Theme CSS -->
     <link href="css/main.css" rel="stylesheet" type="text/css">
+     <link rel="stylesheet" href="/bower_components/angular-google-places-autocomplete/src/autocomplete.css">
 </head>
 
 <body id="page-top" class="index">
@@ -33,6 +34,8 @@
     <!-- MAIN ANGULAR -->
     <script type="text/javascript" src="js/app.js"></script>
     <script type="text/javascript" src="js/config.js"></script>
+   <!--  <script src="https://maps.googleapis.com/maps/api/js?libraries=places"></script> -->
+<script src="/bower_components/angular-google-places-autocomplete/src/autocomplete.js"></script>
     <!-- CONTROLLERS -->
     <script type="text/javascript" src="js/controllers/homeController.js"></script>
     <script type="text/javascript" src="js/controllers/productsController.js"></script>
@@ -44,6 +47,7 @@
     <script type="text/javascript" src="js/services/ApiService.js"></script>
     <!-- Script for API Google and Ng-map -->
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDafjpKKDyuZewwazCQGpx6uUnjZHGODR8"></script>
+  <!--   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDafjpKKDyuZewwazCQGpx6uUnjZHGODR8&libraries=places"></script> -->
     <script type="text/javascript" src="https://rawgit.com/allenhwkim/angularjs-google-maps/master/build/scripts/ng-map.min.js"></script> 
 </body>
 
